syntax = "proto3";

package poktroll.supplier;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "poktroll/supplier/params.proto";
import "poktroll/shared/supplier.proto";
import "cosmos/base/v1beta1/coin.proto";
import "poktroll/supplier/claim.proto";
import "poktroll/supplier/proof.proto";

option go_package = "github.com/pokt-network/poktroll/x/supplier/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/pokt-network/poktroll/supplier/params";
  
  }
  
  // Queries a list of Supplier items.
  rpc Supplier    (QueryGetSupplierRequest) returns (QueryGetSupplierResponse) {
    option (google.api.http).get = "/pokt-network/poktroll/supplier/supplier/{index}";
  
  }
  rpc SupplierAll (QueryAllSupplierRequest) returns (QueryAllSupplierResponse) {
    option (google.api.http).get = "/pokt-network/poktroll/supplier/supplier";
  
  }
  
  // Queries a list of Claim items.
  rpc Claim    (QueryGetClaimRequest) returns (QueryGetClaimResponse) {
    option (google.api.http).get = "/pokt-network/poktroll/supplier/claim/{index}";
  
  }
  rpc ClaimAll (QueryAllClaimRequest) returns (QueryAllClaimResponse) {
    option (google.api.http).get = "/pokt-network/poktroll/supplier/claim";
  
  }
  
  // Queries a list of Proof items.
  rpc Proof    (QueryGetProofRequest) returns (QueryGetProofResponse) {
    option (google.api.http).get = "/pokt-network/poktroll/supplier/proof/{index}";
  
  }
  rpc ProofAll (QueryAllProofRequest) returns (QueryAllProofResponse) {
    option (google.api.http).get = "/pokt-network/poktroll/supplier/proof";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryGetSupplierRequest {
  string index = 1;
}

message QueryGetSupplierResponse {
  poktroll.shared.Supplier supplier = 1 [(gogoproto.nullable) = false];
}

message QueryAllSupplierRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllSupplierResponse {
  repeated poktroll.shared.Supplier               supplier   = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetClaimRequest {
  string index = 1;
}

message QueryGetClaimResponse {
  Claim claim = 1 [(gogoproto.nullable) = false];
}

message QueryAllClaimRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllClaimResponse {
  repeated Claim                                  claim      = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetProofRequest {
  string index = 1;
}

message QueryGetProofResponse {
  Proof proof = 1 [(gogoproto.nullable) = false];
}

message QueryAllProofRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllProofResponse {
  repeated Proof                                  proof      = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

